--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
-p { color: white; }
+dp { color: white; }
 h1 {color: white}
 h2{color: white}
 h3{color: white}
 ol {color: white}
 
-container: {background: black}
+container: {background-color: black}
 
 img {  
 width: 216px;
@@ -12,7 +12,6 @@ height: 338 px;
 }  
 
 basic {
-  display: flex;
   align: center
 }
 
