--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,17 @@
-container: {background-color: pink}
+.container: {background-color: pink}
 
-basic {
+img {  
+width: 216px;
+height: 338 px; 
+}  
+
+.basic {
   background-color: pink;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
 
-info {
-  padding: 20px;
+.info {
+  padding: 100px;
 }
